tests/baselines/reference/typeArgumentsShouldDisallowNonGenericOverloads.errors.txt
tests/cases/compiler/typeArgumentsShouldDisallowNonGenericOverloads.ts(10,5): error TS2322: Type '数字' is not assignable to type '文字'.
tests/cases/compiler/typeArgumentsShouldDisallowNonGenericOverloads.ts(11,5): error TS2322: Type '文字' is not assignable to type '数字'.


==== tests/cases/compiler/typeArgumentsShouldDisallowNonGenericOverloads.ts (2 errors) ====
    function foo(a: string): string;
    function foo<T>(a: T): number;
    function foo(a: any): any {
        return "hi";
    }
    
    var x: number = foo<string>("hi"); // return type should be 'number'
    var y: string = foo("hi"); // return type should be 'string'
    
    var w: string = foo<string>("hi"); // should error
        ~
!!! error TS2322: Type '数字' is not assignable to type '文字'.
    var z: number = foo("hi"); // should error
        ~
!!! error TS2322: Type '文字' is not assignable to type '数字'.